--- a/Capitolo7.tex
+++ b/Capitolo7.tex
@@ -1,2 +1,9 @@
 \chapter{Conclusioni e sviluppi futuri}
+
+Oltre ad aver ampliato le funzionalità di Knoxly fornendogli un modulo semantico capace di individuare dati sensibili in 5 diversi topic(health, politics, job, travel, general) ora è possibile utilizzare il backend di questo plug-in come un framework utile per individuare dati sensibili e personali. Infatti basterà cambiare i dataset di partenza e seguire la metodologia descritta nel Capitolo \ref{ch:method}  per addestrare nuovamente i classificatori a riconoscere nuovi tipi di dati sensibili. A tal proposito si può affermare che i dataset di partenza vanno ampliati aggiungendo nuove opinioni politiche, nuove patologie, nuove frasi che trattano di lavoro e viaggi. Così facendo il Topic classifier avrà una conoscenza maggiore e il numero di falsi positivi da lui individuato diminuirà riuscendo così ad ottenere predizioni sempre più precise.
+
+Se si ampliano i dataset utilizzati dal Topic classifier allora non si può non pensare ad ampliare la taglia del dataset utilizzato per costruire i vari Sensitiveness classifier, questa scelta però non è molto semplice dato che le entry che fanno parte del dataset che va dato in input ai veri Sensitiveness classifier vanno sempre etichettate manualmente.
+
+Oltre ad ampliare i dataset da dare in pasto al Topic classifer e successivamente al Sensitiveness classifier si può anche pensare di aumentare i topic da analizzare. Durante questo lavoro di tesi sono rimasto shockato da un evento tragico che ha dato modo a tutto il mondo di porsi qualche domanda in più(certo questa tesi è stata scritta nel 2020 e di eventi tragici ce ne sono stati già abbastanza e siamo solo a luglio). L'evento in questione è la morte di George Floyd\footnote{\url{https://en.wikipedia.org/wiki/Killing_of_George_Floyd}}. Si potrebbe pensare di aggiungere una nuovo topic all'interno di Knoxly ovvero \textit{racism}, supportato da un buon dataset di addestramento Knoxly sarebbe in grado di individuare contenuti sensibili riguardanti l'origine raziale di una persona, dato che questi risultano essere dati sensibili anche secondo il GDPR. Un altro topic che si può pensare di aggiungere è \textit{gender}, ovvero, addestrare Knoxly a riconoscere frasi che trattano l'orientamento e/o le preferenze sessuali di una persona
+
 Analizzando manualmente i testi per effettuare l'analisi quantitativa(Sez. \ref{sec:qualitative}) si è evinto che l'eristica di input definita in Sez. \ref{ssec:euristicInput} non risulta essere molto efficace dato che invia le frasi al server anche quando non è necessario ad esempio se viene scritta una frase più lunga di 5 caratteri ma essa contiene una abbreviazione come \quotes{Dott.} allora la frase viene inviata al server che analizzerà una frase che non è realmente terminata.
