--- a/capitolo5.tex
+++ b/capitolo5.tex
@@ -78,7 +78,7 @@ Le icone scelte per fornire consapevolezza sono mostrate in Figura~\ref{fig:boll
 \FloatBarrier
 
 
-La sezione \textbf{Statistics} (vedi Figura~\ref{fig:statKnoxly} è dedicata alle misurazioni: l'utente può visualizzare un grafico a barre che riporta il numero di occorrenze di frasi sensibili che lui ha divulgato in rete nei vari topic, politica, salute, viaggi, lavoro e general. Al di sotto del grafico a barre l'utente può visualizzare l'\textbf{overall score} della sensibilità dei contenuti che divulga in rete. L'overall score $s$ viene calcolato come la media aritmetica delle sensibilità date alle frasi ritenute sensibili da Knoxly.
+La sezione \textbf{Statistics} (vedi Figura~\ref{fig:statKnoxly}) è dedicata alle misurazioni: l'utente può visualizzare un grafico a barre che riporta il numero di occorrenze di frasi sensibili che lui ha divulgato in rete nei vari topic, politica, salute, viaggi, lavoro e general. Al di sotto del grafico a barre l'utente può visualizzare l'\textbf{overall score} della sensibilità dei contenuti che divulga in rete. L'overall score $s$ viene calcolato come la media aritmetica delle sensibilità date alle frasi ritenute sensibili da Knoxly.
 
 L'overall score non è altro che il calcolo online della media degli score di sensibilità ottenuti per ciascuna delle frasi che ha divulgato, con riferimento alle sole frasi classificate sensibili. Lo score $s \in [0..1]$ e viene rappresentato come un cerchio che si colora di rosso se l'overall score supera 0.68 altrimenti è mostrato in giallo. 
 \begin{figure}[h]
