--- a/indice.tex
+++ b/indice.tex
@@ -13,6 +13,7 @@
 \usepackage{xcolor}
 \usepackage{comment}
 \usepackage{hyperref}
+\usepackage{cleveref}
 \usepackage{multirow}
 \usepackage{placeins}
 \usepackage{booktabs}
